# q2pro-ng

./: BUILDING.md  README.md  build-qvm.sh  copy-assets.sh  meson.build  meson_options.txt  pak_to_zip.py  wasm.sh
.ci/: nightly.sh  readme-template.txt
.github/workflows/: build.yml  nightly.yml
baseq2/: default.cfg  q2pro.menu
baseq2/vispatches/: mgu6m2.1ebe8001  newbase.7fc783fe  newbase2b.59c584a5  oldbase1.9412cbed
doc/: kex-changes.md
etc/: default.cfg
etc/entpatches/: oldbase1.9412cbed
etc/vispatches/: newbase.7fc783fe  newbase2b.59c584a5  oldbase3.a2560e93
inc/bgame/: bg_lib.h  bg_local.h  m_flash.h
inc/client/: client.h  keys.h
inc/client/sound/: sound.h
inc/common/: bsp.h  cmd.h  cmodel.h  common.h  cvar.h  error.h  files.h  hash_map.h  intreadwrite.h  list.h  math.h  msg.h  pmove.h  prompt.h  protocol.h  sizebuf.h  utils.h  vm.h  zone.h
inc/common/net/: chan.h  net.h
inc/format/: bsp.h
inc/refresh/: refresh.h
inc/server/: server.h
inc/shared/: bg_lib.h  bg_local.h  cgame.h  error.h  game.h  gameext.h  keys.h  matrix.h  platform.h  refresh.h  shared.h  sound.h
inc/system/: hunk.h  system.h
src/bgame/: bg_lib.c  bg_misc.c  bg_pmove.c  bg_slidemove.c  m_flash.c
src/cgame/: cg_consolecmds.c  cg_effects.c  cg_entities.c  cg_events.c  cg_frame.c  cg_local.h  cg_main.c  cg_precache.c  cg_predict.c  cg_screen.c  cg_servercmds.c  cg_syscalls.h  cg_view.c
src/client/: ascii.c  cgame.c  cin.c  client.h  console.c  demo.c  download.c  effects.c  entities.c  http.c  input.c  keys.c  main.c  newfx.c  parse.c  precache.c  predict.c  refresh.c  screen.c  tent.c  view.c
src/client/sound/: al.c  dma.c  main.c  mem.c  miniaudio.c  ogg.c  openal.c  qal.c  qal.h  sound.h
src/client/ui/: demos.c  playerconfig.c  script.c  ui.c  ui.h
src/common/: bsp.c  bsp_template.c  cmd.c  cmodel.c  common.c  cvar.c  error.c  features.h  files.c  math.c  mdfour.c  msg.c  pmove.c  prompt.c  sizebuf.c  system.c  tests.c  utils.c  zone.c
src/common/net/: chan.c
src/common/vm/: dispatch.h  interp.c  load.c  module.c  opcodes.h  printf.c  stdlib.c  vm.h
src/game/: bg_local.h  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_l10n.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_nav.c  g_phys.c  g_save.c  g_spawn.c  g_statusbar.c  g_svcmds.c  g_syscalls.h  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  m_actor.c  m_arachnid.c  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_guardian.c  m_guncmdr.c  m_gunner.c  (+18 more)
src/game/ctf/: g_ctf.c  g_ctf.h  meson.build  p_ctf_menu.c  p_ctf_menu.h
src/game/q1q2/: g_misc_q1q2.c  m_chthon.c  m_chthon.h  m_chtjor.c  m_chtjor.h  m_dog.c  m_dog.h  m_dog_strogg.c  m_dog_strogg.h  m_enforcer.c  m_enforcer.h  m_fiend.c  m_fiend.h  m_fish.c  m_fish.h  m_hellknight.c  m_hellknight.h  m_insane_spawn.c  m_insane_spawn.h  m_knight.c  m_knight.h  m_ogre.c  m_ogre.h  m_ogrestrogg.c  m_ogrestrogg.h  m_shalrath.c  m_shalrath.h  m_shalrath_strogg.c  m_shalrath_strogg.h  m_shambler.c  m_soldier_grunt.c  m_soldier_grunt.h  m_spawn.c  m_spawn.h  m_wizard.c  m_wizard.h  m_zombie.c  m_zombie.h  meson.build
src/game/rogue/: g_rogue_combat.c  g_rogue_func.c  g_rogue_items.c  g_rogue_misc.c  g_rogue_monster.c  g_rogue_newai.c  (+18 more)
src/refresh/: debug.c  draw.c  gl.h  images.c  images.h  main.c  mesh.c  models.c  qgl.c  qgl.h  shader.c  shadow.c  sky.c  state.c  surf.c  tess.c  texture.c  world.c
src/server/: commands.c  entities.c  game.c  init.c  main.c  nav.c  save.c  send.c  server.h  user.c  world.c
src/shared/: bg_lib.c  bg_misc.c  bg_pmove.c  shared.c
src/unix/: hunk.c  system.c
src/windows/: client.c  client.h  egl_import.h  hunk.c  meson.build  system.c
subprojects/: miniaudio.wrap  zlib-ng.wrap
subprojects/packagefiles/miniaudio/: meson.build
(+17 files in other folders)
