option('avcodec',
  type: 'feature',
  value: 'auto',
  description: 'libavcodec support')

option('base-game',
  type: 'string',
  value: 'baseq2',
  description: 'Name of the base game directory')

option('client-ui',
  type: 'boolean',
  value: true,
  description: 'Enable menu-based user interface')

option('default-game',
  type: 'string',
  value: '',
  description: 'Default value for "game" console variable')

option('game-build-options',
  type: 'array',
  value: [],
  description: 'Custom game build options for LTO, etc')

option('homedir',
  type: 'string',
  value: '~/.q2pro',
  description: 'Default value for "homedir" console variable')

option('icmp-errors',
  type: 'feature',
  value: 'auto',
  description: 'Handle ICMP errors on UDP sockets')

option('libcurl',
  type: 'feature',
  value: 'disabled',
  description: 'libcurl support')

option('libjpeg',
  type: 'feature',
  value: 'auto',
  description: 'libjpeg support')

option('libpng',
  type: 'feature',
  value: 'auto',
  description: 'libpng support')

option('md3',
  type: 'boolean',
  value: true,
  description: 'MD3 models support')

option('md5',
  type: 'boolean',
  value: true,
  description: 'MD5 (re-release) models support')

option('openal',
  type: 'feature',
  value: 'auto',
  description: 'OpenAL sound backend')

option('save-games',
  type: 'boolean',
  value: true,
  description: 'Server side support for savegames')

option('sdl2',
  type: 'feature',
  value: 'auto',
  description: 'SDL2 video and audio drivers')

option('software-sound',
  type: 'feature',
  value: 'auto',
  description: 'Software sound backend')

option('system-console',
  type: 'boolean',
  value: true,
  description: 'Enhanced system console support')

option('system-wide',
  type: 'boolean',
  value: true,
  description: 'Enable system-wide installation')

option('tests',
  type: 'boolean',
  value: false,
  description: 'Enable ***dangerous*** built-in testing code. Never use in release builds!')

option('tga',
  type: 'boolean',
  value: true,
  description: 'TGA images support')

option('vid-geometry',
  type: 'string',
  value: '640x480',
  description: 'Default window geometry')

option('vid-modelist',
  type: 'string',
  value: '640x480 800x600 1024x768',
  description: 'Default video mode list')

option('wayland',
  type: 'feature',
  value: 'auto',
  description: 'Wayland video driver')

option('windows-crash-dumps',
  type: 'feature',
  value: 'auto',
  description: 'Windows crash dumps')

option('windows-egl',
  type: 'boolean',
  value: true,
  description: 'Windows EGL video driver')

option('windows-service',
  type: 'boolean',
  value: true,
  description: 'Support for running dedicated server as Windows service')

option('x11',
  type: 'feature',
  value: 'auto',
  description: 'X11 video driver')

option('zlib',
  type: 'feature',
  value: 'auto',
  description: 'zlib support')
