game_src += files(
  'g_misc_q1q2.c',
  'm_chthon.c',
  'm_chtjor.c',
  'm_dog.c',
  'm_dog_strogg.c',
  'm_enforcer.c',
  'm_fiend.c',
  'm_fish.c',
  'm_hellknight.c',
  'm_insane_spawn.c',
  'm_knight.c',
  'm_ogre.c',
  'm_ogrestrogg.c',
  'm_shalrath.c',
  'm_shalrath_strogg.c',
  'm_shambler.c',
  'm_soldier_grunt.c',
  'm_spawn.c',
  'm_wizard.c',
  'm_zombie.c',
)
